--- a/internal/codegen/templates/cobra/flags_add_to_command.tmpl
+++ b/internal/codegen/templates/cobra/flags_add_to_command.tmpl
@@ -3,23 +3,21 @@
 {{- /* Generate the code that appends flags to a command */ -}}
 {{- define "template.defaultVal" -}}
   {{- if eq .Type "string" -}}
-  "{{.DefaultString}}"
-  {{- else if eq .Type "bool" -}}
-  {{.DefaultBool}}
-  {{- else if eq .Type "int" -}}
-  {{.DefaultInt}}
+  "{{.Default}}"
+  {{- else -}}
+  {{.Default}}
   {{- end -}}
 {{- end -}}
 
 {{- define "template.flagFn" -}}
   {{- if and (eq .Type "string") (.Alias) -}}
-    StringVarP(&var{{.FlagPropName}}, "{{.Name}}", "{{.Alias}}", {{template "template.defaultVal" (.)}}, "{{.Summary}}")
+    StringVarP(&flag{{.FlagPropName}}, "{{.Name}}", "{{.Alias}}", {{template "template.defaultVal" (.)}}, "{{.Summary}}")
   {{- else if eq .Type "string" -}}
-    StringVar(&var{{.FlagPropName}}, "{{.Name}}", {{template "template.defaultVal" (.)}}, "{{.Summary}}")
+    StringVar(&flag{{.FlagPropName}}, "{{.Name}}", {{template "template.defaultVal" (.)}}, "{{.Summary}}")
   {{- else if and (eq .Type "bool") (.Alias) -}}
-    BoolVarP(&var{{.FlagPropName}}, "{{.Name}}", "{{.Alias}}", {{template "template.defaultVal" (.)}}, "{{.Summary}}")
+    BoolVarP(&flag{{.FlagPropName}}, "{{.Name}}", "{{.Alias}}", {{template "template.defaultVal" (.)}}, "{{.Summary}}")
   {{- else if eq .Type "bool" -}}
-    BoolVar(&var{{.FlagPropName}}, "{{.Name}}", {{template "template.defaultVal" (.)}}, "{{.Summary}}")
+    BoolVar(&flag{{.FlagPropName}}, "{{.Name}}", {{template "template.defaultVal" (.)}}, "{{.Summary}}")
   {{- end -}}
 {{- end -}}
 
@@ -28,4 +26,9 @@
 {{- end -}}
 {{- range $i, $val := .Flags}}
   cmd.Flags().{{template "template.flagFn" ($val)}}
+{{- end}}
+{{- range $i, $val := .Flags}}
+  {{- if $val.Required}}
+  cmd.MarkFlagRequired("{{$val.Name}}")
+  {{- end -}}
 {{- end}}
