feat: initial command code generation [wip]

--- a/pkg/ocli/templates/cli/urfavecli/args_types.tmpl
+++ b/pkg/ocli/templates/cli/urfavecli/args_types.tmpl
@@ -2,11 +2,10 @@
 /* CLI command argument types
 ------------------------------------------------------------------------------------------------- */
 {{range $i, $cmd := .Doc.Commands}}{{if not .Group}}{{if .Arguments}}
-
 // {{.Name | PascalCase}}Args holds the parsed arguments that will be injected into the command handler implementation.
 type {{.Name | PascalCase}}Args struct {
 {{- range .Arguments}}
-  {{.Name | PascalCase}} {{if .Variadic.Enabled}}[]{{end}}{{if .Choices}}{{$cmd.Name | PascalCase}}{{.Name | PascalCase}}ArgEnum{{else if eq .Type "boolean"}}bool{{else}}string{{end}}
+  {{.Name | PascalCase}} {{if .Variadic.Enabled}}[]{{end}}{{if .Choices}}string{{else if eq .Type "boolean"}}bool{{else}}string{{end}}
 {{end -}}
 }
 {{- end}}{{end}}{{end}}
