--- a/pkg/ocli/templates/cli/urfavecli/cli_params.gen.go.tmpl
+++ b/pkg/ocli/templates/cli/urfavecli/cli_params.gen.go.tmpl
@@ -7,8 +7,6 @@ import (
   "fmt"
   "strings"
 )
-
 {{template "args_types.tmpl" .}}
-{{template "args_enums.tmpl" .}}
 {{template "flag_types.tmpl" .}}
-{{template "flag_enums.tmpl" .}}
+{{template "enums.tmpl" .}}
