feat: initial CLI implementation

--- a/pkg/ocli/templates/cli/urfavecli/cli.gen.go.tmpl
+++ b/pkg/ocli/templates/cli/urfavecli/cli.gen.go.tmpl
@@ -12,5 +12,7 @@ import (
 
 func New(impl CLIHandlersInterface) *urfavecli.Command {
 {{template "cmd.tmpl" .Doc.CommandTrie.Root}}
+
+  {{.Doc.CommandTrie.Root.Command.Name | CamelCase}}Cmd.Version = "{{.Doc.Info.Version}}"
   return {{.Doc.CommandTrie.Root.Command.Name | CamelCase}}Cmd
 }
